--- a/client/src/app/modules/tiers/components/tiers-main/tiers-main.component.html
+++ b/client/src/app/modules/tiers/components/tiers-main/tiers-main.component.html
@@ -166,8 +166,8 @@
         <table class="full-width">
           <tr>
             <td>
-              <chips-confrere [(model)]="tiers.competitors" [form]="principalForm" propertyName="competitors"
-                [isMandatory]="false" [isDisabled]="!editMode" label="Concurrents"></chips-confrere>
+              <chips-competitor [(model)]="tiers.competitors" [form]="principalForm" propertyName="competitors"
+                [isMandatory]="false" [isDisabled]="!editMode" label="Concurrents"></chips-competitor>
             </td>
           </tr>
         </table>
