--- a/client/src/app/modules/administration/components/referentials/referential-competent-authority/referential-competent-authority.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-competent-authority/referential-competent-authority.component.html
@@ -124,6 +124,10 @@
                 (onOptionSelected)="fillAccountProvider()">
               </autocomplete-accounting-account>
             </td>
+            <td>
+              <generic-input [(model)]="selectedEntity.reinvoicing" label="Refacturation (%)" [form]="entityForm"
+                propertyName="reinvoicing" [isMandatory]="false" [isDisabled]="!editMode" type="number"></generic-input>
+            </td>
           </tr>
         </table>
         <table class="full-width">
