--- a/client/src/app/modules/miscellaneous/components/history/history.component.html
+++ b/client/src/app/modules/miscellaneous/components/history/history.component.html
@@ -12,11 +12,11 @@
       </ng-container>
       <ng-container matColumnDef="oldValue">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Ancienne valeur</th>
-        <td mat-cell *matCellDef="let element">{{element.oldValue}}</td>
+        <td mat-cell *matCellDef="let element">{{parseValues(element.oldValue)}}</td>
       </ng-container>
       <ng-container matColumnDef="newValue">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Nouvelle valeur</th>
-        <td mat-cell *matCellDef="let element">{{element.newValue}}</td>
+        <td mat-cell *matCellDef="let element">{{parseValues(element.newValue)}}</td>
       </ng-container>
       <ng-container matColumnDef="createdBy">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Auteur</th>
