--- a/client/src/app/modules/quotation/components/bodacc-sale/bodacc-sale.component.html
+++ b/client/src/app/modules/quotation/components/bodacc-sale/bodacc-sale.component.html
@@ -15,7 +15,7 @@
         <mat-expansion-panel *ngIf="transfertFundsType.code!=BODACC_SALE_TRANSFERT_FUND_TYPE_BAIL">
           <mat-expansion-panel-header>
             <mat-panel-title>
-              Fonds cédée
+              Fonds cédé
             </mat-panel-title>
             <ng-template [ngTemplateOutlet]="accordionTools"></ng-template>
           </mat-expansion-panel-header>
