--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -157,6 +157,13 @@ mat-form-field.mat-form-field-should-float label {
   z-index: 9999;
 }
 
+.fifth-fab-button {
+  position: fixed !important;
+  bottom: 40px !important;
+  right: 320px !important;
+  z-index: 9999;
+}
+
 .mat-expansion-panel-header-description {
   flex-grow: 0 !important;
 }
