--- a/client/src/app/modules/administration/components/referentials/referential-billing-type/referential-billing-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-billing-type/referential-billing-type.component.html
@@ -47,38 +47,19 @@
                 [form]="entityForm" propertyName="label" [isMandatory]="true" [isDisabled]="!editMode"></generic-input>
             </td>
           </tr>
+          <tr>
+            <td>
+              <generic-toggle [(model)]="selectedEntity.canOverridePrice"
+                label="Possibilité pour l'utilisateur de surcharger le prix ?" [form]="entityForm"
+                propertyName="canOverridePrice"></generic-toggle>
+            </td>
+            <td>
+              <generic-toggle [(model)]="selectedEntity.isPriceBasedOnCharacterNumber"
+                label="Prix basé sur le nombre de charactères ?" [form]="entityForm"
+                propertyName="isPriceBasedOnCharacterNumber"></generic-toggle>
+            </td>
+          </tr>
         </table>
-        <div class="mat-accordion-container full-width">
-          <table class="full-width" *ngIf="assoSpecialOfferBillingItems">
-            <tr *ngFor="let assoSpecialOfferBillingItem of assoSpecialOfferBillingItems; let i = index">
-              <td>
-                <select-billing-type [(model)]="assoSpecialOfferBillingItems[i].billingType"
-                  label="Famille de poste de facturation" [form]="entityForm" [propertyName]="'billingType'+i"
-                  [isMandatory]="true" [isDisabled]="!editMode"></select-billing-type>
-              </td>
-              <td>
-                <generic-input [(model)]="assoSpecialOfferBillingItems[i].discountAmount" label="Réduction (€)"
-                  [form]="entityForm" [propertyName]="'discountAmount'+i" [isMandatory]="true" [isDisabled]="!editMode"
-                  [conditionnalRequired]="!assoSpecialOfferBillingItems[i].discountRate || assoSpecialOfferBillingItems[i].discountRate==0"
-                  type="number"></generic-input>
-              </td>
-              <td>
-                <generic-input [(model)]="assoSpecialOfferBillingItems[i].discountRate" label="Taux de réduction (%)"
-                  [form]="entityForm" [propertyName]="'discountRate'+i" [isMandatory]="true" [isDisabled]="!editMode"
-                  [conditionnalRequired]="!assoSpecialOfferBillingItems[i].discountAmount || assoSpecialOfferBillingItems[i].discountAmount==0"
-                  type="number"></generic-input>
-              </td>
-            </tr>
-          </table>
-          <table class="full-width">
-            <tr>
-              <td>
-                <button *ngIf="editMode" (click)="addAsso()" mat-raised-button color="accent">Ajouter un poste de
-                  facturation</button>
-              </td>
-            </tr>
-          </table>
-        </div>
       </fieldset>
     </div>
   </form>
