--- a/client/src/app/modules/miscellaneous/components/forms/generic-input/generic-input.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/generic-input/generic-input.component.html
@@ -1,4 +1,4 @@
 <mat-form-field class="full-width" [formGroup]="form!">
-  <mat-label>{{label}}</mat-label>
-  <input matInput [formControlName]="propertyName" [placeholder]="label" [type]="type">
+  <mat-label *ngIf="label && label.length>0">{{label}}</mat-label>
+  <input matInput [formControlName]="propertyName" [placeholder]="label" [type]="type" (change)="inputChange()">
 </mat-form-field>
